fixed about section overlap

--- a/src/Components/About Me/About.css
+++ b/src/Components/About Me/About.css
@@ -1,5 +1,4 @@
 .aboutTotal {
-    height: 100vh;
     padding-top: 60px;
 }
 
@@ -10,6 +9,7 @@
 .aboutText {
     margin: 30px 50px auto 50px;
     text-align: right;
+    margin-bottom: 50px;
 }
 
 @media screen and (max-width: 600px) {
